# mapflow

./: .gitignore  AGENTS.md  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: CI.yaml  pytest.yaml
docs/: api.rst  conf.py  how_to_use.rst  index.rst  requirements.txt
docs/api/: animations.rst  static.rst
mapflow/: __init__.py  _animate.py  _classic.py  _misc.py  _plot.py  _quiver.py  _stream.py
scripts/: logo.py
tests/: test_animate.py  test_lazy.py  test_plot.py  test_stream.py
xrviz/: __init__.py  _animate.py
xrviz/_static/: world.gpkg
